# xnemogcm

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  Pipfile  README.md  mkdocs.yml  pyproject.toml  requirement.txt  setup.py  todo.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml  ci.yml  ci_run_notebook.yml  ci_upgrade_dependencies.yml  publish.yml  python-package.yml  ruff.yml
docs/: CODE_OF_CONDUCT.md  api.md  conf.py  dev.md  index.md  index.rst  new.md
docs/examples/: compute_metrics.ipynb  open_process_files.ipynb  recombing_mesh_mask_domain_cfg.ipynb
docs/src_example/: compute_metrics.ipynb  open_process_files.ipynb  recombing_mesh_mask_domain_cfg.ipynb
example/: compute_metrics.ipynb  example_open_files.ipynb  open_files.ipynb  open_process_files.ipynb  recombing_mesh_mask_domain_cfg.ipynb
example/.ipynb_checkpoints/: compute_metrics-checkpoint.ipynb  open_files-checkpoint.ipynb
exemple/: open_files.ipynb
xnemogcm/: __init__.py  arakawa_points.py  domcfg.py  merge.py  metrics.py  namelist.py  nemo.py  tools.py
xnemogcm/test/: conftest.py  test_dask.py  test_domcfg.py  test_merge.py  test_metrics.py  test_namelist.py  test_nemo.py  test_surface.py  test_version.py
xnemogcm/test/data/3.6/domcfg_mesh_mask/: mesh_mask_0000.nc
xnemogcm/test/data/3.6/mesh_mask_multi_files/: mesh_mask_0001.nc
xnemogcm/test/data/4.0.0/domcfg_1_file/: domain_cfg_out.nc
xnemogcm/test/data/4.0.0/domcfg_mesh_mask/: mesh_mask_0001.nc
xnemogcm/test/data/4.0.0/domcfg_multi_files/: domain_cfg_out_0002.nc  domain_cfg_out_0003.nc
xnemogcm/test/data/4.0.0/nemo/: BASIN_grid_T.nc
xnemogcm/test/data/4.0.0/nemo_no_grid_in_filename/: BASIN_V.nc  BASIN_W.nc
xnemogcm/test/data/4.0/domcfg_mesh_mask/: domain_cfg_out_0000.nc
xnemogcm/test/data/4.0/surface_fields/: GYRE_1y_00010101_00011230_grid_T.nc
xnemogcm/test/data/4.2.0/domcfg_mesh_mask/: domain_cfg_out_0001.nc  domain_cfg_out_0003.nc
xnemogcm/test/data/5.0/domcfg_mesh_mask/: domain_cfg_out_0002.nc
xnemogcm/test/data/5.0/mesh_mask_1_file/: mesh_mask.nc
xnemogcm/test/data/5.0/mesh_mask_multi_files/: mesh_mask_0002.nc  mesh_mask_0003.nc
xnemogcm/test/data/5.0/nemo_no_grid_in_filename/: V.nc  W.nc
xnemogcm/test/data/5.0/open_and_merge/: GYRE_1y_00010101_00011230_grid_U.nc
xnemogcm/test/data/5.0/surface_fields/: GYRE_1y_00010101_00011230_surface_grid_T.nc
xnemogcm/test/data/domcfg_1_file/: domain_cfg_out.nc  xnemogcm.domcfg.nc
xnemogcm/test/data/domcfg_mesh_mask/: domain_cfg_out_0000.nc  domain_cfg_out_0001.nc  domain_cfg_out_0002.nc  domain_cfg_out_0003.nc  mesh_mask_0000.nc  mesh_mask_0001.nc  mesh_mask_0002.nc  mesh_mask_0003.nc
xnemogcm/test/data/domcfg_multi_files/: domain_cfg_out_0000.nc  domain_cfg_out_0001.nc  domain_cfg_out_0002.nc  domain_cfg_out_0003.nc
xnemogcm/test/data/mesh_mask_multi_files/: mesh_mask_0000.nc  mesh_mask_0001.nc  mesh_mask_0002.nc  mesh_mask_0003.nc
xnemogcm/test/data/namelist/: namelist_cfg  namelist_ref
xnemogcm/test/data/nemo/: BASIN_1ts_00010101_00010101_grid_T.nc  BASIN_1ts_00010101_00010101_grid_U.nc  BASIN_1ts_00010101_00010101_grid_V.nc  BASIN_1ts_00010101_00010101_grid_W.nc  xnemogcm.nemo.nc
xnemogcm/test/data/open_and_merge/: BASIN_1ts_00010101_00010101_grid_T.nc  BASIN_1ts_00010101_00010101_grid_U.nc  BASIN_1ts_00010101_00010101_grid_V.nc  BASIN_1ts_00010101_00010101_grid_W.nc  BASIN_grid_U.nc  domain_cfg_out.nc  xnemogcm.domcfg.nc
xnemogcm/test/data/runs/: sort_data.sh
xnemogcm/test/data/runs/EXP_1_proc/: BASIN_1d_00010101_00010103_grid_U.nc  domain_cfg_out.nc
xnemogcm/test/data/runs/EXP_4_procs/: domain_cfg_out_0002.nc  (+6 more)
xnemogcm/test/data/surface_fields/: BASIN_surface_grid_T.nc
(+86 files in other folders)
