[tool.poetry]
name = "xnemogcm"
version = "0.4.1"
description = "Interface to open NEMO global circulation model output dataset and create a xgcm grid."
license = "MIT"
homepage = "https://github.com/rcaneill/xnemogcm"
authors = ["Romain Caneill <romain.caneill@gu.se>"]
readme = "README.md"
exclude = ["xnemogcm/test/data"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
dask = {extras = ["array"], version = "*"}
netcdf4 = ">=1.5.8"
xarray = ">=0.21.1"
xgcm = {optional = true, version = ">=0.6.0"}
f90nml = {optional = true, version = ">=1.3.1"}

[tool.poetry.extras]
namelist = ["f90nml"]
metrics = ["xgcm"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
xgcm = ">=0.6.0"
f90nml = ">=1.3.1"
pytest = ">=6.2.5"
toml = "^0.10.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
jupyterlab = ">=3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
