[tool.poetry]
name = "xnemogcm"
version = "0.4.3"
description = "Interface to open NEMO global circulation model output dataset and create a xgcm grid."
license = "MIT"
homepage = "https://github.com/rcaneill/xnemogcm"
authors = ["Romain Caneill <romain.caneill@ens-lyon.org>"]
readme = "README.md"
exclude = ["xnemogcm/test/data"]

[tool.poetry.dependencies]
python = ">=3.9"
dask = {extras = ["array"], version = "*"}
netcdf4 = ">=1.5.8"
xarray = ">=0.21.1"
xgcm = {optional = true, version = ">=0.6.0"}
f90nml = {optional = true, version = ">=1.3.1"}
pre-commit = {optional = true, version = "^3.6.2"}

[tool.poetry.extras]
namelist = ["f90nml"]
metrics = ["xgcm"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
xgcm = ">=0.6.0"
f90nml = ">=1.3.1"
pytest = ">=6.2.5"
toml = "^0.10.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
jupyterlab = ">=3.5.1"
pre-commit = "^3.6.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-jupyter = "^0.24.6"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]
