[build-system]
build-backend = "uv_build"
requires = [
  "uv-build<0.12,>=0.11.15",
]

[project]
name = "xnemogcm"
version = "0.6.0"
description = "Interface to open NEMO global circulation model output dataset and create a xgcm grid."
readme = "README.md"
license = "MIT"
authors = [ { name = "Romain Caneill", email = "romain.caneill@ens-lyon.org" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "dask[array]>=2024.8.1",
  "netcdf4>=1.7",
  "numpy>=2",
  "packaging>=26.2",
  "xarray>=2024.9",
]
optional-dependencies.metrics = [
  "xgcm>=0.6",
]
optional-dependencies.namelist = [
  "f90nml>=1.3.1",
]
urls.Homepage = "https://github.com/rcaneill/xnemogcm"

[dependency-groups]
dev = [
  "black>=22.10,<23",
  "jupyterlab>=3.5.1",
  "pre-commit>=3.6.2,<4",
]
test = [
  "f90nml>=1.3.1",
  "pytest>=9",
  "toml>=0.10.2,<0.11",
  "xgcm>=0.6",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-jupyter>=0.25",
  "mkdocstrings[python]>=0.26.1",
]

[tool.uv]
build-backend.module-root = ""
build-backend.source-exclude = [ "xnemogcm/test/data" ]
build-backend.wheel-exclude = [ "xnemogcm/test/data" ]
